# ay-128

./: .gitignore  README.md  pyproject.toml
labs/01/: 01-01.ipynb  01-02.ipynb  01-period-recovery.ipynb  02-01.ipynb  02-lightcurve-morphology.ipynb  02-pre02.ipynb  03-mcmc-validation.ipynb  04-calibration-sample.ipynb  04.ipynb  05.ipynb  06.ipynb  07-period-color.ipynb  08-extinction.ipynb  08.ipynb  LAB1_COMPLETENESS_AUDIT.md  README.md  flat_pc_rrab.npy  flat_pc_rrc.npy  part-2.ipynb  part-3.ipynb  rrlyrae_clean_data.npz
labs/01/report/: main.tex  ref.bib
labs/02/: part-1.ipynb
labs/archive/: flat_pc_rrab.npy  flat_pc_rrc.npy
labs/archive/.joblib-cache/: .gitignore
tests/: test_artifacts.py  test_dust.py  test_fourier.py  test_gaia.py  test_lightcurves.py  test_plotting.py  test_queries.py  test_relations.py  test_runtime.py  test_sdss.py
ugdatalab/: __init__.py  artifacts.py  deoutlier.py  dust.py  fourier.py  lightcurves.py  mcmc.py  paths.py  plotting.py  queries.py  relations.py
ugdatalab.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
ugdatalab/models/: __init__.py  cache.py  deoutlier.py  gaia.py  gaia_data.py  sdss.py  wise.py
